--- a/style.css
+++ b/style.css
@@ -57,7 +57,15 @@ body {
 }
 
 .background-lightblue {
-	background-color: #BED5F7
+	background-color: #BED5F7;
+}
+
+.background-aqua {
+	background-color: #92EBFF;
+}
+
+.background-yellow {
+	background-color: #FED64A;
 }
 
 #navbarSupportedContent{
@@ -77,6 +85,39 @@ body {
 	background-color: #ECECEC;
 }
 
+.card-border {
+	border-color: #D4D4D4;
+	border-radius: 10%;
+}
+
+#join{
+	background-color: #ECFCFF;
+}
+
+#subs ul {
+	list-style: none;
+}
+
+#subs ul li::before {
+	content: "\2022"; 
+	color: #EE6767; 
+	font-size: larger;
+	font-weight: 700; 
+	display: inline-block; 
+	width: 1em; 
+	margin-left: -1.3em; 
+}
+
+#subs .no-dot::before {
+	content: "\2022"; 
+	color: #FED64A; 
+	font-size: larger;
+	font-weight: 700; 
+	display: inline-block; 
+	width: 1em; 
+	margin-left: -1.3em; 
+}
+
 #contacts{
 	background-color: #ECFCFF;
 }
@@ -84,12 +125,24 @@ body {
 .btn-primary{
 	background-color: #EB5757;
 	border-color: #EB5757;
-  font-size: 22px;
+  	font-size: 22px;
 }
 
 .btn-primary:hover{
 	background-color: #eb3e3e;
 	border-color: #eb3e3e;
+}
+
+.btn-secondary{
+	background-color: #D4D4D4;
+	border-color: #D4D4D4;
+  	font-size: 18px;
+}
+
+.btn-secondary:hover{
+	background-color: #b9b8b8;
+	border-color: #b9b8b8;
+	color: black;
 }
 
 .separator > div + div::after {
