--- a/style.css
+++ b/style.css
@@ -24,6 +24,14 @@ body {
 	font-weight: 700;
 }
 
+.font-16 {
+	font-size: 16px;
+}
+
+.font-18 {
+	font-size: 18px;
+}
+
 .text-black {
 	color: black;
 }
@@ -44,6 +52,10 @@ body {
 	color: #B2B2B2;
 }
 
+.text-cabgrey {
+	color: #D4D4D4;
+}
+
 .text-darkgrey {
 	color: #777777;
 }
@@ -56,8 +68,20 @@ body {
 	background-color: #F5F5F5;
 }
 
+.background-blue {
+	background-color: #105C86;
+}
+
 .background-lightblue {
 	background-color: #BED5F7;
+}
+
+.background-cabinet {
+	background-color: #DDF9FF;
+}
+
+.background-sky{
+	background-color: #ECFCFF;
 }
 
 .background-aqua {
@@ -66,6 +90,10 @@ body {
 
 .background-yellow {
 	background-color: #FED64A;
+}
+
+.border-lightgrey {
+	border-color: #ECECEC;
 }
 
 #navbarSupportedContent{
@@ -88,6 +116,10 @@ body {
 .card-border {
 	border-color: #D4D4D4;
 	border-radius: 10%;
+}
+
+.profile_header{
+	background-color: #105B86;
 }
 
 #join{
@@ -133,6 +165,16 @@ body {
 	border-color: #eb3e3e;
 }
 
+.btn-primary-nofill{
+	border-color: #EB5757;
+  	font-size: 22px;
+}
+
+.btn-primary-nofill:hover{
+	border-color: #eb3e3e;
+	color: #eb3e3e;
+}
+
 .btn-secondary{
 	background-color: #D4D4D4;
 	border-color: #D4D4D4;
@@ -143,6 +185,24 @@ body {
 	background-color: #b9b8b8;
 	border-color: #b9b8b8;
 	color: black;
+}
+
+.btn-blue-fill{
+	background-color: #105C86;
+	border-color: #105C86;
+}
+
+.btn-blue-fill:hover{
+	background-color: #0c4361;
+	border-color: #0c4361;
+}
+
+.btn-blue-nofill{
+	border-color: #105C86;
+}
+
+.btn-blue-nofill:hover{
+	border-color: #0c4361;
 }
 
 .separator > div + div::after {
@@ -199,4 +259,51 @@ hr {
 
 .add-emp {
 	width: 40%;
+}
+
+.pretty_input{
+	background-color: transparent;
+	border-width:0px 0px 0.8px 0px;
+	border-color: gray;
+	border-style: solid;
+	width: 100%;
+}
+.pretty_button{
+	background-color: #ECECEC;
+	border-color: transparent;
+	border-radius: 5px;
+}
+
+.list-group-item{
+	background-color: transparent !important;
+	border-color: #AED3DB;
+}
+.fill {
+    overflow: hidden;
+    max-width: 100%;
+    height: auto;
+}
+.folder_fin{
+	border-bottom: 50px solid #105C86;
+	border-left: 0 solid transparent;
+	border-right: 50px solid transparent;
+	height: 0;
+	border-radius: 15px 0px 0px 0px;
+	width: 60%;
+}
+.folder{
+	background-color: #105C86;
+}
+.folder_up{
+	border-radius: 0px 15px 0px 0px;
+}
+.folder_down{
+	border-radius: 0px 0px 15px 15px;
+}
+.costs  tr  th{
+	text-align: center;
+	padding: 1em;
+}
+.costs  tr  th:first-child{
+	text-align: left;
 }
