--- a/style.css
+++ b/style.css
@@ -24,12 +24,20 @@ body {
 	font-weight: 700;
 }
 
+.font-10 {
+	font-size: 10px;
+}
+
 .font-16 {
 	font-size: 16px;
 }
 
 .font-18 {
-	font-size: 18px;
+	font-size: 18px !important;
+}
+
+.font-22 {
+	font-size: 22px !important;
 }
 
 .text-black {
@@ -82,6 +90,10 @@ body {
 
 .background-sky{
 	background-color: #ECFCFF;
+}
+
+.background-table {
+	background-color: #C7DDFF;
 }
 
 .background-aqua {
@@ -165,6 +177,17 @@ body {
 	border-color: #eb3e3e;
 }
 
+.btn-primary-small{
+	background-color: #EB5757;
+	border-color: #EB5757;
+  	font-size: 16px;
+}
+
+.btn-primary-small:hover{
+	background-color: #eb3e3e;
+	border-color: #eb3e3e;
+}
+
 .btn-primary-nofill{
 	border-color: #EB5757;
   	font-size: 22px;
@@ -185,6 +208,17 @@ body {
 	background-color: #b9b8b8;
 	border-color: #b9b8b8;
 	color: black;
+}
+
+.btn-secondary-light{
+	background-color: #ECECEC;
+	border-color: #ECECEC;
+	font-size: 18px;
+}
+
+.btn-secondary-light:hover{
+	background-color: #cac9c9;
+	border-color: #cac9c9;
 }
 
 .btn-blue-fill{
@@ -264,14 +298,9 @@ hr {
 .pretty_input{
 	background-color: transparent;
 	border-width:0px 0px 0.8px 0px;
-	border-color: gray;
+	border-color: #D4D4D4;
 	border-style: solid;
 	width: 100%;
-}
-.pretty_button{
-	background-color: #ECECEC;
-	border-color: transparent;
-	border-radius: 5px;
 }
 
 .list-group-item{
@@ -300,10 +329,19 @@ hr {
 .folder_down{
 	border-radius: 0px 0px 15px 15px;
 }
+
 .costs  tr  th{
 	text-align: center;
 	padding: 1em;
 }
 .costs  tr  th:first-child{
 	text-align: left;
+}
+
+.accordion-button::after {
+    background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='%23333' xmlns='http://www.w3.org/2000/svg'%3e%3cpath fill-rule='evenodd' d='M8 0a1 1 0 0 1 1 1v6h6a1 1 0 1 1 0 2H9v6a1 1 0 1 1-2 0V9H1a1 1 0 0 1 0-2h6V1a1 1 0 0 1 1-1z' clip-rule='evenodd'/%3e%3c/svg%3e");
+    transform: scale(0.75) !important;
+}
+.accordion-button:not(.collapsed)::after {
+    background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='%23333' xmlns='http://www.w3.org/2000/svg'%3e%3cpath fill-rule='evenodd' d='M0 8a1 1 0 0 1 1-1h14a1 1 0 1 1 0 2H1a1 1 0 0 1-1-1z' clip-rule='evenodd'/%3e%3c/svg%3e");
 }
